# Pi-oneer

./: .clang-format  CMakeLists.txt  MusicPage.qml  README.md  RoundImage.qml  SettingsPage.qml  main.cpp  qml.qrc
debian/: changelog  control
icons/: icons.qrc
src/: BottomBar.qml  Clock.qml  HomePage.qml  LargeButton.qml  MapPage.qml  MapSettingsPage.qml  MusicPage.qml  PhoneConnectPage.qml  SettingsPage.qml  main.cpp  main.qml  musicplaymanager.cpp  musicplaymanager.hpp  musictablemodel.cpp  musictablemodel.h  musictablemodel.hpp  musictagparser.cpp  musictagparser.h  musictagparser.hpp  trackmodel.cpp  trackmodel.hpp  vncitem.cpp  vncitem.hpp
